# powergrid_network

./: .dockerignore  .gitignore  COMMIT_MESSAGE.md  Cargo.toml  DEMO_GUIDE.md  DOCKER.md  DOCKER_CROSS_PLATFORM_REPORT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_USAGE.md  Dockerfile  E2E_TESTS_FIXED.md  E2E_TESTS_RESPONSE.md  E2E_TESTS_SUCCESS_REPORT.md  ENHANCED_E2E_TESTS.md  MILESTONE_2_STATUS.md  MILESTONE_REVIEW.md  README.md  SECURITY_AUDIT_REPORT.md  SETUP_COMPLETE.md  SETUP_STATUS.md  TESTING.md  docker-compose.yml  docker-entrypoint.sh  simulate-docker-e2e.sh  test-docker.sh
backend/: .env.bak  requirements.txt  update-env.sh
backend/config/: config.py
backend/scripts/: check-rewards.py  create_test_event.py  demo_complete_workflow.py  setup_authorization.py
backend/src/: blockchain_client.py  oracle_service.py  tapo_monitor.py
contracts/: Cargo.toml  lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/grid_service/: Cargo.toml
contracts/grid_service/src/: lib.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs  real_e2e_tests.rs
contracts/resource_registry/: Cargo.toml
contracts/resource_registry/src/: lib.rs
contracts/tests/: integration.rs
contracts/token/: Cargo.toml  temp
contracts/token/src/: lib.rs
docs/: COMPLETE_TUTORIAL.md  INTEGRATION_TEST_SUITE.md  README.md  TEST_RESULTS.md  WORKFLOW_DEMONSTRATION.md  setup-and-testing.md
docs/api/: README.md
docs/guides/: user-guide.md
scripts/: README.md  build-all.sh  check-docker-build.sh  check-scripts.sh  complete-e2e-validation.sh  complete-integration-test.sh  create-grid-event.sh  demo-automation.sh  demo-e2e-fix.sh  demo-full-flow.sh  deploy-and-run-e2e-docker.sh  deploy-and-run-e2e.sh  deploy-local.sh  manual-deploy.sh  quality-review.sh  quick-test.sh  registerDevice.js  run-e2e-test.sh  run-node.sh  setup-integration-tests.sh  setup.sh  start-node-and-deploy.sh  test-all.sh  test-e2e.sh  test-integration.sh  test-interactions.sh  validate-arithmetic.sh  validate-build.sh  validate-deployment-script.sh
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  traits.rs  types.rs
