[workspace]
resolver = "2"
members = [
    "shared",
    "contracts/resource_registry",
    "contracts/grid_service", 
    "contracts/token",
    "contracts/governance",
    "contracts/integration-tests",
]
exclude = [
    "target",
    "artifacts",
    "node_modules",
]

[workspace.package]
version = "0.1.0"
authors = ["Kunal <kunaldrall29@gmail.com>", "Daksh"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kunal-drall/powergrid_network"

[workspace.dependencies]
ink = { version = "5.1.1", default-features = false }
ink_e2e = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
powergrid-shared = { path = "shared", default-features = false }