[package]
name = "powergrid-shared"
version = "0.1.0"
authors = ["Kunal <kunaldrall29@gmail.com>", "Daksh"]
edition = "2021"
license = "MIT"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]