[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ink.workspace = true
scale.workspace = true
scale-info.workspace = true
powergrid-shared.workspace = true

# Include all contract dependencies for integration testing
powergrid_token = { path = "../token", default-features = false }
resource_registry = { path = "../resource_registry", default-features = false }
grid_service = { path = "../grid_service", default-features = false }
governance = { path = "../governance", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "powergrid-shared/std",
    "powergrid_token/std",
    "resource_registry/std", 
    "grid_service/std",
    "governance/std",
]
